# architecture-pattern

./:  test_allocate.py  .gitignore  Dockerfile  conftest.py  docker-compose.yml  model.py  orm.py  pyproject.toml  repository.py  test_batch.py  test_batches.py  test_repository.py
app/: config.py  db.py  deps.py  orm.py  schema.py
app/adapter/: orm.py  repository.py
app/domain/: model.py
app/services/: services.py
app/views/: api.py
tests/: conftest.py  test_allocate.py  test_api.py  test_batches.py  test_repository.py  test_services.py
