[tool.poetry]
name = "architecture-pattern"
version = "0.1.0"
description = ""
authors = ["kairo"]
readme = "README.md"
packages = [{include = "architecture_pattern"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
ruff = "^0.0.219"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-ignore = ["I001"] 
line-length = 100
fix = true
exclude = ["**/versions/**"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.isort]
profile = "black"
line_length = 100
skip = ["versions"]

[tool.black]
line-length = 100
exclude = ["**/versions/**"]

[tool.mypy]
python_version = "3.10" 
ignore_missing_imports = true 
disallow_any_generics = true 
disallow_untyped_calls= true 
disallow_untyped_defs= true 
disallow_incomplete_defs = true 
disallow_untyped_decorators = true 
check_untyped_defs = true 
strict_optional = false 
warn_redundant_casts = true 
warn_unused_ignores = true 
allow_redefinition = true 
show_column_numbers = true 
pretty = true 
plugins = ["sqlalchemy.ext.mypy.plugin","pydantic.mypy"]